receive/thanos-receive-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: database-write-hashring
    app.kubernetes.io/instance: thanos-receive-default
    app.kubernetes.io/name: thanos-receive
    app.kubernetes.io/version: v0.38.0
    controller.receive.thanos.io/hashring: default
  name: thanos-receive-default
  namespace: thanos
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 10902
    targetPort: 10902
  - name: remote-write
    port: 19291
    targetPort: 19291
  selector:
    app.kubernetes.io/component: database-write-hashring
    app.kubernetes.io/instance: thanos-receive-default
    app.kubernetes.io/name: thanos-receive
    controller.receive.thanos.io/hashring: default
